# advent_of_code

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  tmp.profile
src/2015/data/: day_01_example.txt
src/2015/python/: day_01.py
src/2023/python/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py
src/2023/rust/: README.md
src/2024/python/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_06_brute_force.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_6.py
src/2024/scratchbook/: scrapbook.ipynb  scratchbook1.ipynb
src/aoc/: __init__.py  constants.py  coordinates_to_index.py  data_files.py  direction.py  index_to_coordinates.py  loader.py  textmap.py
src/aoc/grid/: __init__.py  adjacency_map.py  count_corners.py  dijkstra.py  dijkstra_with_direction.py  direction.py  find_adjacent.py  find_holes.py  find_lines.py  find_shortest_path.py  get_coordinates_from_line.py  group_adjacent.py  is_adjacent.py  outer_bounds.py  perimeter.py  scoring_functions.py  surrounding.py  within_bounds.py
src/aoc/number/: __init__.py  overlap.py
src/aoc/tools/: __init__.py  timer.py
src/aoc/types/: __init__.py  coordinate.py  direction.py  general_types.py  textmap.py  types.py
src/templates/: generate_template.py  python_template.py
tests/: test_aoc_examples.py
tests/aoc/: test_data_files.py  test_direction.py  test_loader.py  test_textmap.py
tests/aoc/grid/: test_adjacency_map.py  (+13 more)
(+23 files in other folders)
